--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </p> 
     <hr>
     <div class="grid">
-      <img class="large" src="images/bar2.jpeg" alt="Fachada bar">
+      <!-- <img class="large" src="images/bar2.jpeg" alt="Fachada bar">
       <img class="small" src="images/apresentacao.jpeg" alt="Preparação de drinks">
-      <img class="small" src="images/DrinkMendes.jpeg" alt="Drink Mendes">
+      <img class="small" src="images/DrinkMendes.jpeg" alt="Drink Mendes"> -->
       <img class="small" src="images/drinks.jpeg" alt="Drink especial">
       <img class="small" src="images/decoracao.jpeg" alt="RECEPÇÃO">
       <img class="small" src="images/bar3.jpeg" alt="Equipe">
