--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero">
     <!-- <img src="images/whatsapp.png" class="small" alt="Orçamentos por Whatsapp (00) 0000-0000"> -->
     <h1>Mendes Drinks</h1>
-    <h3>"Venha conhecer nossa estrutura de primeira linha. Atendimento personalizado, orçamentos por Whatsaap e mão de obra qualificada.</h3>
+    <h3>Venha conhecer nossa estrutura de primeira linha. Atendimento personalizado, orçamentos por Whatsaap e mão de obra qualificada.</h3>
     <a href="#newsletter" class="btn">Solicite seu orçamento</a>
   </section>
 
