--- a/index.html
+++ b/index.html
@@ -26,22 +26,21 @@
   <section class="hero">
     <!-- <img src="images/whatsapp.png" class="small" alt="Orçamentos por Whatsapp (00) 0000-0000"> -->
     <h1>Mendes Drinks</h1>
-    <h3>Venha conhecer nossa estrutura de primeira linha. Atendimento personalizado, orçamentos por Whatsaap e mão de obra qualificada.</h3>
+    <h3>"Venha conhecer nossos serviços. Atendimento personalizado e interação facilitada por meio do WhatsApp"</h3>
     <a href="#newsletter" class="btn">Solicite seu orçamento</a>
   </section>
 
   <section class="know-the-farao" id="about">
     <h3>Por dentro da Mendes Drinks!</h3>
-    <p>Meu nome é Flávio Mendes, sou proprietário e idealizador do Mendes Drink's. De funcionário público a garçom, encontrei no empreendedorismo a oportunidade de ter autonomia e alcançar sonhos, não só meus, como da minha família.
-    </p>
+    <p>Meu nome é Flávio Mendes, sou proprietário e idealizador do Mendes Drink's. De funcionário público a garçom, encontrei no empreendedorismo a oportunidade de ter autonomia e alcançar sonhos, não só meus, como da minha família. </p>
 
-    <p>Hoje não me vejo atuando em outra área pois, de certa forma, sigo realizando meus sonhos e os sonhos dos meus clientes que contam com bons drinks nos momentos mais felizes e importantes de suas vidas. E em breve teremos novidades: Mendes Buffet.
-    </p> 
+    <p>Hoje não me vejo atuando em outra área pois, também tenho a oportunidade de participar da concretização dos sonhos dos meus clientes que contam com bons drinks nos momentos felizes de suas vidas.
+    </p>
     <hr>
-    <div class="grid">
-      <!-- <img class="large" src="images/bar2.jpeg" alt="Fachada bar">
+    <div class="grid galery">
+      <!-- <img class="large" src="images/bar2.jpeg" alt="Fachada bar"> -->
       <img class="small" src="images/apresentacao.jpeg" alt="Preparação de drinks">
-      <img class="small" src="images/DrinkMendes.jpeg" alt="Drink Mendes"> -->
+      <!-- <img class="small" src="images/DrinkMendes.jpeg" alt="Drink Mendes"> -->
       <img class="small" src="images/drinks.jpeg" alt="Drink especial">
       <img class="small" src="images/decoracao.jpeg" alt="RECEPÇÃO">
       <img class="small" src="images/bar3.jpeg" alt="Equipe">
@@ -53,7 +52,7 @@
     <p>A Mendes Drinks é uma empresa especializada em fornecer os melhores drinks para festas e eventos em todo o país. Com experiência no mercado de bebidas, a Mendes Drinks oferece uma ampla variedade de opções de bebidas de qualidade para satisfazer os paladares mais exigentes.
     <br>
     <br>
-    Desde a seleção dos melhores ingredientes até a preparação cuidadosa de cada bebida, a Mendes Drinks se dedica a oferecer um serviço impecável e personalizado para cada evento. Com uma equipe de bartenders altamente qualificados, a empresa garante que cada drink seja preparado com perfeição e servido com elegância e profissionalismo.
+    Desde a seleção dos melhores ingredientes até a preparação cuidadosa de cada bebida, a Mendes Drinks se dedica a oferecer um serviço personalizado e de qualidade. Com uma equipe de bartenders treinados com excelência, nossa missão é fazer do seu evento um momento memorável.
     <br>
     <br>
     A Mendes Drinks oferece uma ampla variedade de opções de bebidas, incluindo coquetéis clássicos, contemporâneos e muito mais. A empresa trabalha com bebidas alcoólicas e não alcoólicas, garantindo a qualidade e autenticidade de cada drink servido.
@@ -86,7 +85,7 @@
   </section>
 
   <section class="newsletter" id="newsletter">
-    <h3>Solicite seu orçamento por email</h3>
+    <h3>Solicite seu orçamento por email ou <a href="#contatos">whatsapp</a></h3>
     <p>Mendes aqui! Mendes lá! Mendes está em todo Lugar! <br>Pensou em festa? É só chamar!
     </p>
   <div class="flex-container">
@@ -109,9 +108,7 @@
 
   <footer id="contatos">
     <h3>Aproveite pra seguir nossas redes sociais:</h3>
-    <p>Caso prefira, também fazemos orçamentos por Whatsapp!
-      <br>
-      E nos siga no Instagram para ficar por dentro das novidades e conhecer um pouco mais do nosso trabalho. Nos vemos por lá!</p>
+    <p>Para conhecer mais sobre nossos serviços e ficar por dentro das novidades! Nos vemos lá!</p>
     <ul>
       <li>
         <a href="https://api.whatsapp.com/send?phone=%2B553284040700&data=AWCZTvHniSdmgSG8ikkuiyF6nbKoKbH_EW4gfpf_qugvuEuppJnsOs5AASCC4C9opRQjSje6F_k1Nxntub9on5DtNW3DsI_EJ47De2j5DvArsHUfBnJZ--Cqg89xAenLMOGhq53HYQvt3ncnVyh0sS44rgweT_JgPrODFSwiFuCum9uEkP_s-3EUnCyjFVHLBoE8ZOL4fe4pFkLm1Ua_-S4ha2ohih5fYTnrqIOzSPc2SUmhWrx40VrXi6uZGeNrpzIhRcG4-fziY0Or0HZ5Fw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwAR0Di1OTReZ91FcgtTd_srGf6BqTJVCb1OM1x2q85WW9kBFquo2Lod89zmc" target="_blank">
