modificação de rodape

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </a>
       </li>
     </ul>
-    <p>Todos os direitos reservados - Mendes Drinks® 2022</p>
+    <p>Todos os direitos reservados - Mendes Buffet® 2023</p>
   </footer>
 </body>
 </html>
