alteração de email

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="flex-container">
     <img class="flex-item" src="images/flavio.jpeg">
     
-    <form id="myForm" action="mailto:jdn1937@hotmail.com" method="post" enctype="text/plain">
+    <form id="myForm" action="mailto:mendesdrinksbq@gmail.com" method="post" enctype="text/plain">
       <label>Nome:</label>
       <input type="text" name="name" required>
       <br>
