adicionando galeria de slides

--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
     <p>Hoje não me vejo atuando em outra área pois, também tenho a oportunidade de participar da concretização dos sonhos dos meus clientes que contam com bons drinks nos momentos felizes de suas vidas.
     </p>
     <hr>
-    <div class="grid galery">
-      <!-- <img class="large" src="images/bar2.jpeg" alt="Fachada bar"> -->
-      <img class="small" src="images/apresentacao.jpeg" alt="Preparação de drinks">
-      <!-- <img class="small" src="images/DrinkMendes.jpeg" alt="Drink Mendes"> -->
-      <img class="small" src="images/drinks.jpeg" alt="Drink especial">
-      <img class="small" src="images/decoracao.jpeg" alt="RECEPÇÃO">
-      <img class="small" src="images/bar3.jpeg" alt="Equipe">
+    <div class="gallery">
+      <img src="images/apresentacao.jpeg" alt="Image 1">
+      <img src="images/foto-1.jpg" alt="foto1">
+      <img src="images/foto-5.jpg" alt="foto2">
+      <img src="images/foto-3.jpg" alt="foto3">
+      <img src="images/foto-4.jpg" alt="foto4">
+      <img src="images/foto-17.jpg" alt="foto17">
+      <img src="images/foto-7.jpg" alt="foto7">
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
   </section>
+  
 
   <section class="store" id="store">
     <h3>Serviços</h3>
@@ -128,5 +132,6 @@
     </ul>
     <p>Todos os direitos reservados - Mendes Buffet® 2023</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
